# pcie_physical

./: .gitignore  README.md  controller.core  env-setup.sh  librelane_config.json  multilane.core  pcie.core  pcie_physical.core  pyproject.toml
src/constraints/fpga/artys7/: timing.xdc
src/rtl/: capabilities_pkg.sv  data_lane_striper.sv  ltssm_pkg.sv  ltssm_pkg.svh  multi_lane_controller.sv  packet_assembly.sv  pcie_phys_top.sv  register_pkg.sv  scrambler.sv
src/rtl/bin_to_gray/: Makefile  README.md  bin_to_gray.core  bin_to_gray.sv  tb_bin_to_gray.py
src/rtl/controller/: control_detect.sv  control_polling.sv  control_status_regs.sv  pcie_controller.sv  surfer_savestate.ron  tb_controller.sv
src/rtl/encoders/: .gitignore  disparity_checker.sv  encoder.core  encoder_3b4b.sv  encoder_5b6b.sv  encoder_8b10b.sv  encoders.core  tb_encoder_8b10b.sv
src/rtl/fifo/: Makefile  README.md  fifo.core  fifo.sv  tb_fifo.py
src/rtl/linear-feedback-shift-register/: Makefile  lfsr.core  linear_feedback_shift_reg.sv  tb_lfsr.sv  tb_linear_feedback_shift_reg.py
src/rtl/scrambler/: scrambler.sv
src/rtl/serializer/: Makefile  README.md  serializer.core  serializer.sv  tb_serializer.py  tb_serializer.sv
src/rtl/timer/: timer.sv
src/rtl/unary_to_binary/: Makefile  tb_unary_to_binary.py  unary_to_binary.sv
src/tb/: tb_clocking_block.sv  tb_pcie_physical.sv
src/tb/cocotb/: Makefile  filelist.mk  tb_pcie_phys_top.py
src/tb/cocotb/multilane_controller/: .gitignore  Makefile  tb_multilane_controller.py
src/tb/cocotb/serializer/: .gitignore  Makefile  tb_serializer.py
(+3 files in other folders)
