[project]
name = "pcie-physical"
version = "0.1.0"
description = ""
authors = [
    {name = "Winston",email = "winston.ong92@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "fusesoc (>=2.4.3,<3.0.0)",
    "cocotb (>=2.0.0,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false